# pypluggy

./: .myenv  README.md  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
config/: deb.py  project.py  python.py  version.py
pypluggy/: mgr.py  static.py  version.py
src/pypluggy/: mgr.py  static.py
tests/unit_tests/: test_names.py
