[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypluggy"
version = "0.0.15"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pypluggy is a lightweight plugin framework for python"
readme = "README.md"
license = "MIT"
keywords=[
    "plugin",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pypluggy"
"Bug Tracker" = "https://github.com/veltzer/pypluggy/issues"
"Documentation" = "https://veltzer.github.io/pypluggy"
"Download" = "https://pypi.org/project/pypluggy/"
"Repository" = "https://github.com/veltzer/pypluggy"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pypluggy"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pypluggy/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
